subo cambios necesarios con metodo filter

--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
     <p class="js-movimientos movimientos"></p>
     <p class="js-puntaje puntaje"></p>
 
-    <button id="Resetear" class="reset-puntaje-boton">Resetear</button>
-
-    <button id="MostrarEstadisticas" class="mostrar-estadisticas-boton">Mostrar Estadísticas</button>
+    <button id="Resetear" class="boton">Resetear</button>
 
     <p class="js-estadisticas"></p>
 
